tests/scan/fixtures/validation/negative/clean_go_clean-auth-handler/clean-auth-handler.go
// Package clean-auth-handler is a clean Go module.
package clean-auth-handler

func Hello() string { return "hello" }
